--- a/NoteApp/Views/Shared/_Layout.cshtml
+++ b/NoteApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Управление пользователями", "Manage", "User")</li>
+                    <text style="color:white;">Admin</text>
                 </ul>
                 }
             </div>
