--- a/NoteApp/Views/Shared/DisplayTemplates/User.cshtml
+++ b/NoteApp/Views/Shared/DisplayTemplates/User.cshtml
@@ -9,10 +9,12 @@
         <div class="pull-right">
             @if (Model.IsEnabled)
             {
+                <a href="@Url.Action("Delete", "User", new { userId = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Удалить</a>
                 <a href="@Url.Action("LockUnlock", "User", new { userId = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Заблокировать</a>
             }
             else
             {
+                <a href="@Url.Action("Delete", "User", new { userId = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Удалить</a>
                 <a href="@Url.Action("LockUnlock", "User", new { userId = Model.Id })" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-ok-circle"></span> Разблокировать</a>
             }
         </div>
