--- a/NoteApp/Views/Shared/DisplayTemplates/User.cshtml
+++ b/NoteApp/Views/Shared/DisplayTemplates/User.cshtml
@@ -7,14 +7,14 @@
     <td>@Html.DisplayFor(model => model.Roles)</td>
     <td>
         <div class="pull-right">
+            <a href="@Url.Action("Delete", "User", new { Id = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Удалить</a>
+
             @if (Model.IsEnabled)
             {
-                <a href="@Url.Action("Delete", "User", new { userId = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Удалить</a>
                 <a href="@Url.Action("LockUnlock", "User", new { userId = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Заблокировать</a>
             }
             else
             {
-                <a href="@Url.Action("Delete", "User", new { userId = Model.Id })" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-ban-circle"></span> Удалить</a>
                 <a href="@Url.Action("LockUnlock", "User", new { userId = Model.Id })" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-ok-circle"></span> Разблокировать</a>
             }
         </div>
