--- a/NoteApp/Views/Resume/Index.cshtml
+++ b/NoteApp/Views/Resume/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using NoteApp.Extensions
 @model NoteApp.Models.ResumeListViewModel
 @{
-    ViewBag.Title = "Мои резюме";
+    ViewBag.Title = "Резюме";
 }
 <h2 style="display:inline-block; margin-bottom:0px">@ViewBag.Title</h2>
 @using (Html.BeginForm("Index", "Resume", FormMethod.Get, new { @class = "form-inline pull-right", style = "margin-top:20px" }))
@@ -32,14 +32,18 @@ else
 {
     <p class="text-center">Резюме нет</p>
 }
+@if (User.IsInRole("Candidate"))
+{
 <div class="container">
     <a href="@Url.Action("Create")" class="btn btn-success"><span class="glyphicon glyphicon-pencil"></span> Новое резюме</a>
 </div>
+}
 <div id="modDialog" class="modal fade" role="dialog">
     <div id="dialogContent" class="modal-dialog"></div>
 </div>
 @section scripts {
-    <script type="text/javascript">$(function () {
+    <script type="text/javascript">
+    $(function () {
             $.ajaxSetup({ cache: false });
             $(".resume").click(function (e) {
                 e.preventDefault();
