--- a/NoteApp/Views/Resume/Details.cshtml
+++ b/NoteApp/Views/Resume/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
+    var list = ViewBag.List as IEnumerable<SelectListItem>;
 }
 
 <h2>Details</h2>
@@ -34,14 +35,17 @@
             @Html.DisplayFor(model => model.Requirments)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("Type", list)
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Загрузить" class="btn btn-default" />
+            </div>
+        </div>
     </dl>
 </div>
 <p>
