--- a/NoteApp/Views/Resume/Create.cshtml
+++ b/NoteApp/Views/Resume/Create.cshtml
@@ -12,6 +12,16 @@
     
 <div class="form-horizontal">
     <div class="form-group">
+        @Html.LabelFor(model => model.FIO, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.FIO, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.FIO, "", new { @class = "text-danger" })
+        </div>
+    </div>
+</div>
+
+<div class="form-horizontal">
+    <div class="form-group">
         @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control" } })
