--- a/NoteApp/Views/Resume/Index.cshtml
+++ b/NoteApp/Views/Resume/Index.cshtml
@@ -7,7 +7,7 @@
 @using (Html.BeginForm("Index", "Resume", FormMethod.Get, new { @class = "form-inline pull-right", style = "margin-top:20px" }))
 {
     <div class="form-group">
-        <input placeholder="Найти по названию..." name="SearchQuery" type="text" class="form-control" />
+        <input placeholder="Найти по требованиям..." name="SearchQuery" type="text" class="form-control" />
     </div>
     <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Найти</button>
 }
